--- a/config/locales/fra/help/dashboards-trade.txt
+++ b/config/locales/fra/help/dashboards-trade.txt
@@ -15,5 +15,5 @@ Il est bon d'avoir au préalable enregistré ses clients et fournisseurs grâce 
   * Vous avez également la possibilité de paramétrer des informations telles que les types de **délais**, de **vente** ou de **paiement**, ou les **catégories de produits**. Autant de paramètres qui vous permettent d'affiner et de **personnaliser** votre gestion commerciale.
 
 ===== Le tableau de bord =====
-  * Il vous permet en un coup d'oeil d'avoir accès aux **événements** pouvant nécessiter un traitement rapide de votre part, ou à des **informations** générales.
+  * Il vous permet en un coup d'œil d'avoir accès aux **événements** pouvant nécessiter un traitement rapide de votre part, ou à des **informations** générales.
   * Il comporte également les éventuels produits pour lesquels le **niveau de stock** est **sous le seuil minimum critique**.
