--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -914,6 +914,7 @@ fra:
     planned_depreciations: "Amortissements prévus"
     planned_on: "Prévu le"
     point_value: "Point value"
+    # population: "Population"
     population_counting: "Gestion quantitative"
     position: "Position"
     postcode: "Code postal"
