Removes services controller

--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -941,7 +941,7 @@ jpn:
     # document: "Document joint"
     # document_natures: "Types de documents"
     # document_templates: "Modèles de documents"
-    # doer_evaluated_cost: "Coût main d'oeuvre"
+    # doer_evaluated_cost: "Coût main d'œuvre"
     # dont_use_journal: "— Ne pas utiliser de journal —"
     # down: "Descendre"
     # down_to_level: "Détailler jusqu’au niveau"
