Deactivates useless actions

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -914,6 +914,7 @@ fra:
     planned_depreciations: "Amortissements prévus"
     planned_on: "Prévu le"
     point_value: "Point value"
+    # population: "Population"
     population_counting: "Gestion quantitative"
     position: "Position"
     postcode: "Code postal"
@@ -942,6 +943,7 @@ fra:
     # product_measurements: "Product measurements"
     product_moves: "Product moves"
     product_nature: "Product nature"
+    # product_nature_categories: "Product nature categories"
     production: "Production"
     # production_support: "Production support"
     productions: "Productions"
@@ -1010,6 +1012,7 @@ fra:
     responsible: "Responsable"
     # ressource: "Ressource"
     # ressource_type: "Ressource type"
+    # restricted: "Restricted"
     rgt: "Limite droite"
     rights: "Droits"
     role: "Rôle de base"
