--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -113,6 +113,7 @@ eng:
     backend/cells/demo_map_cells: #?
     backend/cells/demo_pie_cells: #?
     backend/cells/elapsed_interventions_times_by_activities_cells: #?
+    backend/cells/events_cells: #?
     backend/cells/expense_chart_cells: #?
     backend/cells/last_document_archives_cells: #?
     backend/cells/last_entities_cells: #?
