--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -114,6 +114,7 @@ jpn:
     backend/cells/demo_pie_cells: #?
     backend/cells/elapsed_interventions_times_by_activities_cells: #?
     backend/cells/elevage_rss_cells: #?
+    backend/cells/events_cells: #?
     backend/cells/expense_chart_cells: #?
     backend/cells/last_document_archives_cells: #?
     backend/cells/last_entities_cells: #?
