--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -479,10 +479,7 @@ jpn:
       # index: "Produits"
       # new: "Créer un produit"
       # show: "%{nature_name}\_: %{name}"
-    backend/professions:
-      # edit: "Modifier la profession\_: %{name}"
-      # index: "Professions"
-      # new: "Ajouter une nouvelle profession"
+    backend/professions: #?
     backend/purchase_items:
       # edit: "Modifier une ligne de la commande"
       # new: "Ajouter un produit à la commande"
@@ -658,7 +655,6 @@ jpn:
     # backend/product_localizations: "Localisations"
     # backend/product_natures: "Types de produits"
     # backend/products: "Produits"
-    # backend/professions: "Professions"
     # backend/purchase_items: "Lignes d’achat"
     # backend/purchase_natures: "Types d’achat"
     # backend/purchases: "Achats"
