--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -925,6 +925,7 @@ jpn:
     # planned_depreciations: "Amortissements prévus"
     # planned_on: "Prévu le"
     # point_value: "Point value"
+    # population: "Population"
     # population_counting: "Gestion quantitative"
     # position: "Position"
     # postcode: "Code postal"
